--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">PiktogramApp</string>
     <string name="action_settings">Innstillinger</string>
+    <string name="welcome">Velkommen til PiktogramApp!</string>
+    <string name="start">Start</string>
 </resources>
