--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <string name="preference_file_key" translatable="false">com.d24.android.pictogramapp.PREFERENCE_FILE_KEY</string>
     <string name="preference_value_username" translatable="false">Username</string>
+    <string name="preference_value_firstrun" translatable="false">First run</string>
 </resources>
