--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="welcome">Welcome to PictogramApp!</string>
-    <string name="start">Start</string>
+    <string name="button_start">Start</string>
 
     <string name="preference_file_key" translatable="false">com.d24.android.pictogramapp.PREFERENCE_FILE_KEY</string>
     <string name="preference_value_username" translatable="false">Username</string>
