--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -9,6 +9,7 @@
     <string name="button_info">Info</string>
     <string name="button_redo">Gjør om</string>
     <string name="button_undo">Angre</string>
+    <string name="button_save">Lagre</string>
     <string name="content_add">Legg til en figur på scenen</string>
     <string name="content_background">Endre bakgrunnsfarger</string>
     <string name="content_info">Vis informasjon</string>
