--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -17,7 +17,8 @@
     <string name="content_undo">Angre den siste endringen</string>
     <string name="button_cancel">Avbryt</string>
     <string name="button_retry">Prøv igjen</string>
-    <string name="error_file_save">Kunne ikkje lagre fil</string>
+    <string name="error_file_save">Kunne ikkje lagra fil</string>
     <string name="success_file_save">Fil lagra</string>
-    <string name="dialog_save">Gjev historia eit namn</string>
+    <string name="dialog_save">Gje historia eit namn</string>
+    <string name="error_file_load">Kunne ikkje opne fil</string>
 </resources>
