Add empty view to main activity list

--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -21,4 +21,6 @@
     <string name="success_file_save">Fil lagret</string>
     <string name="dialog_save">Gi historien et navn</string>
     <string name="error_file_load">Kunne ikke åpne fil</string>
+    <string name="empty_figure">Et bilde av en usynlig person</string>
+    <string name="empty">Ikke noe å vise her</string>
 </resources>
