--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -21,4 +21,6 @@
     <string name="success_file_save">Fil lagra</string>
     <string name="dialog_save">Gje historia eit namn</string>
     <string name="error_file_load">Kunne ikkje opne fil</string>
+    <string name="empty_figure">Eit bilde av ein usynleg person</string>
+    <string name="empty">Intet å vise her</string>
 </resources>
