--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,15 @@
     <string name="content_redo">Redo the previous change</string>
     <string name="content_info">Display information</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <string name="dialog_save_and_exit">Save and exit</string>
+    <string name="dialog_exit_info">Save your story and return to the main menu</string>
+    <string name="dialog_confirm">Confirm</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="dialog_save_canceled">Saving cancel</string>
+
+
+
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="error_file_save">Could not save file to storage</string>
     <string name="success_file_save">File saved successfully</string>
     <string name="button_retry">Try again</string>
