--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -20,6 +20,10 @@
     <string name="error_file_save">Kunne ikkje lagra fil</string>
     <string name="success_file_save">Fil lagra</string>
     <string name="dialog_save">Gje historia eit namn</string>
+    <string name="dialog_save_and_exit">Lagra og avslutta?</string>
+    <string name="dialog_exit_info">Lagre forteljinga og returner til hovudmenyen</string>
+    <string name="dialog_confirm">Godkjenn</string>
+    <string name="dialog_cancel">Avbryt</string>
     <string name="error_file_load">Kunne ikkje opne fil</string>
     <string name="empty_figure">Eit bilde av ein usynleg person</string>
     <string name="empty">Ingen historiar oppretta enda</string>
