--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,6 @@
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_save_canceled">Saving cancel</string>
 
-
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="error_file_save">Could not save file to storage</string>
     <string name="success_file_save">File saved successfully</string>
     <string name="button_retry">Try again</string>
@@ -50,4 +47,8 @@
     <string name="title_stories">Your stories</string>
     <string name="action_move_forward">Move scene right</string>
     <string name="action_move_back">Move scene left</string>
+    <string name="field_name">Name</string>
+    <string name="error_file_rename">Could not rename file</string>
+    <string name="dialog_delete">Do you want to delete this story?</string>
+    <string name="error_file_delete">Could not delete file</string>
 </resources>
