--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -18,7 +18,7 @@
     <string name="button_cancel">Avbryt</string>
     <string name="button_retry">Prøv igjen</string>
     <string name="error_file_save">Kunne ikke lagre fil</string>
-    <string name="success_file_save">Fil lagret</string>
+    <string name="success_file_save">Historie lagret</string>
     <string name="dialog_save">Gi historien et navn</string>
     <string name="dialog_save_and_exit">Lagre og avslutte?</string>
     <string name="dialog_exit_info">Lagre fortellingen og returner til hovedmenyen</string> //
@@ -39,4 +39,17 @@
     <string name="error_file_rename">Kunne ikke endre navn på fil</string>
     <string name="dialog_delete">Vil du slette denne historien?</string>
     <string name="error_file_delete">Kunne ikke slette fil</string>
+    <string name="success_story_delete">Historie slettet</string>
+    <string name="intro_about">Lag dine egne historier med symbolske figurer</string>
+    <string name="intro_adding_description">Legg til figurer og farger via handlingslinjen</string>
+    <string name="intro_credits">Utviklet i samarbeid med</string>
+    <string name="intro_adding_title">Skap innhold</string>
+    <string name="intro_editing_description">Endre position, størrelse og rotasjon med firkantboksen</string>
+    <string name="intro_editing_title">Endre innhold</string>
+    <string name="logo_kb_description">Logo for Kirkens Bymisjon</string>
+    <string name="logo_uib_description">Logo for Universitetet i Bergen</string>
+    <string name="intro_credits_and">og</string>
+    <string name="app_intro_skip_button">Hopp over</string>
+    <string name="app_intro_done_button">Ferdig</string>
+    <string name="action_show_intro">Vis introsekvens</string>
 </resources>
