Fix minor details (intro picture sizes, translations)

--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -17,30 +17,30 @@
     <string name="content_undo">Angre den siste endringen</string>
     <string name="button_cancel">Avbryt</string>
     <string name="button_retry">Prøv igjen</string>
-    <string name="error_file_save">Kunne ikke lagre fil</string>
-    <string name="success_file_save">Historie lagret</string>
-    <string name="dialog_save">Gi historien et navn</string>
+    <string name="error_file_save">Kunne ikke lagre fortelling</string>
+    <string name="success_file_save">Fortelling lagret</string>
+    <string name="dialog_save">Gi fortellingen et navn</string>
     <string name="dialog_save_and_exit">Lagre og avslutte?</string>
     <string name="dialog_exit_info">Lagre fortellingen og returner til hovedmenyen</string> //
     <string name="dialog_confirm">Godkjenn</string>
     <string name="dialog_discard">Forkast</string>
     <string name="dialog_cancel">Avbryt</string>
-    <string name="error_file_load">Kunne ikke åpne fil</string>
+    <string name="error_file_load">Kunne ikke åpne fortelling</string>
     <string name="empty_figure">Et bilde av en usynlig person</string>
-    <string name="empty">Ingen historier opprettet ennå</string>
+    <string name="empty">Ingen fortellinger opprettet ennå</string>
     <string name="action_add_page">Legg til ny scene</string>
     <string name="action_remove_page">Fjern scene</string>
-    <string name="content_edit">Endre navn på historien</string>
-    <string name="content_delete">Slett denne historien</string>
-    <string name="title_stories">Dine historier</string>
+    <string name="content_edit">Endre navn på fortellingen</string>
+    <string name="content_delete">Slett denne fortellingen</string>
+    <string name="title_stories">Dine fortellinger</string>
     <string name="action_move_back">Flytt scene til venstre</string>
     <string name="action_move_forward">Flytt scene til høyre</string>
     <string name="field_name">Navn</string>
-    <string name="error_file_rename">Kunne ikke endre navn på fil</string>
-    <string name="dialog_delete">Vil du slette denne historien?</string>
-    <string name="error_file_delete">Kunne ikke slette fil</string>
-    <string name="success_story_delete">Historie slettet</string>
-    <string name="intro_about">Lag dine egne historier med symbolske figurer</string>
+    <string name="error_file_rename">Kunne ikke endre navn på fortelling</string>
+    <string name="dialog_delete">Vil du slette denne fortellingen?</string>
+    <string name="error_file_delete">Kunne ikke slette fortelling</string>
+    <string name="success_story_delete">Fortelling slettet</string>
+    <string name="intro_about">Lag dine egne fortellinger med symbolske figurer</string>
     <string name="intro_adding_description">Legg til figurer og farger via handlingslinjen</string>
     <string name="intro_credits">Utviklet i samarbeid med</string>
     <string name="intro_adding_title">Skap innhold</string>
@@ -51,5 +51,6 @@
     <string name="intro_credits_and">og</string>
     <string name="app_intro_skip_button">Hopp over</string>
     <string name="app_intro_done_button">Ferdig</string>
-    <string name="action_show_intro">Vis introsekvens</string>
+    <string name="action_show_intro">Vis introduksjon</string>
+    <string name="error_file_restore">Kunne ikke gjenopprette ffortelling</string>
 </resources>
