--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -7,40 +7,40 @@
     <string name="button_add">Legg til</string>
     <string name="button_background">Bakgrunn</string>
     <string name="button_info">Info</string>
-    <string name="button_redo">Gjør om</string>
+    <string name="button_redo">Gjer om</string>
     <string name="button_undo">Angra</string>
     <string name="button_save">Lagre</string>
-    <string name="content_add">Legg til ein figur på scenen</string>
+    <string name="content_add">Legg til ein figur på scena</string>
     <string name="content_background">Endre bakgrunnsfargar</string>
     <string name="content_info">Vis informasjon</string>
     <string name="content_redo">Gjør om den neste endringen</string>
     <string name="content_undo">Angre den siste endringen</string>
     <string name="button_cancel">Avbryt</string>
     <string name="button_retry">Prøv igjen</string>
-    <string name="error_file_save">Kunne ikkje lagra fil</string>
-    <string name="success_file_save">Historie lagra</string>
-    <string name="dialog_save">Gje historia eit namn</string>
+    <string name="error_file_save">Kunne ikkje lagra fortelling</string>
+    <string name="success_file_save">Forteljing lagra</string>
+    <string name="dialog_save">Gje forteljinga eit namn</string>
     <string name="dialog_save_and_exit">Lagra og avslutta?</string>
     <string name="dialog_exit_info">Lagre forteljinga og returner til hovudmenyen</string>
     <string name="dialog_confirm">Godkjenn</string>
     <string name="dialog_discard">Forkast</string>
     <string name="dialog_cancel">Avbryt</string>
-    <string name="error_file_load">Kunne ikkje opne fil</string>
+    <string name="error_file_load">Kunne ikkje opne fortelling</string>
     <string name="empty_figure">Eit bilde av ein usynleg person</string>
-    <string name="empty">Ingen historiar oppretta enda</string>
+    <string name="empty">Ingen forteljingar oppretta enda</string>
     <string name="action_add_page">Legg til ny scene</string>
     <string name="action_remove_page">Fjern scene</string>
-    <string name="content_edit">Endra namn på historia</string>
-    <string name="content_delete">Slett denne historia</string>
-    <string name="title_stories">Dine historiar</string>
+    <string name="content_edit">Endra namn på forteljinga</string>
+    <string name="content_delete">Slett denne forteljinga</string>
+    <string name="title_stories">Dine forteljingar</string>
     <string name="action_move_back">Flytt scene til venstre</string>
     <string name="action_move_forward">Flytt scene til høgre</string>
-    <string name="field_name">Navn</string>
-    <string name="error_file_rename">Kunne ikkje endra namn på fil</string>
-    <string name="dialog_delete">Vil du sletta denne historien?</string>
-    <string name="error_file_delete">Kunne ikkje sletta fil</string>
-    <string name="success_story_delete">Historie sletta</string>
-    <string name="intro_about">Lag dine eigne historiar med symbolske figurar</string>
+    <string name="field_name">Namn</string>
+    <string name="error_file_rename">Kunne ikkje endra namn på fortelling</string>
+    <string name="dialog_delete">Vil du sletta denne forteljinga?</string>
+    <string name="error_file_delete">Kunne ikkje sletta fortelling</string>
+    <string name="success_story_delete">Forteljing sletta</string>
+    <string name="intro_about">Lag dine eigne fortellingar med symbolske figurar</string>
     <string name="intro_adding_description">Legg til figurar og fargar via handlingslinja</string>
     <string name="intro_credits">Utvikla i samarbeid med</string>
     <string name="intro_adding_title">Skap innhold</string>
@@ -51,5 +51,6 @@
     <string name="intro_credits_and">og</string>
     <string name="app_intro_skip_button">Hopp over</string>
     <string name="app_intro_done_button">Ferdig</string>
-    <string name="action_show_intro">Vis introsekvens</string>
+    <string name="action_show_intro">Vis introduksjon</string>
+    <string name="error_file_restore">Kunne ikkje gjenoppretta fortelling</string>
 </resources>
