--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,6 @@
     <string name="app_name">PictogramApp</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_staging">StagingActivity</string>
-
-    <string name="button_label_stage">Staging</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="welcome">Welcome to PictogramApp!</string>
     <string name="button_start">Start</string>
 
@@ -31,14 +26,13 @@
     <string name="dialog_confirm">Confirm</string>
     <string name="dialog_discard">Discard</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="dialog_save_canceled">Saving cancel</string>
 
-    <string name="error_file_save">Could not save file to storage</string>
+    <string name="error_file_save">Could not save story</string>
     <string name="success_file_save">Story saved successfully</string>
     <string name="button_retry">Try again</string>
     <string name="button_cancel">Cancel</string>
     <string name="dialog_save">Name your story</string>
-    <string name="error_file_load">Could not load file</string>
+    <string name="error_file_load">Could not load story</string>
     <string name="empty">No stories created yet</string>
     <string name="empty_figure">A figure illustrating an invisible person</string>
     <string name="action_add_page">Add new scene</string>
@@ -49,13 +43,13 @@
     <string name="action_move_forward">Move scene right</string>
     <string name="action_move_back">Move scene left</string>
     <string name="field_name">Name</string>
-    <string name="error_file_rename">Could not rename file</string>
+    <string name="error_file_rename">Could not rename story</string>
     <string name="dialog_delete">Do you want to delete this story?</string>
-    <string name="error_file_delete">Could not delete file</string>
+    <string name="error_file_delete">Could not delete story</string>
     <string name="key_file" translatable="false">filename</string>
     <string name="success_story_delete">Story deleted</string>
     <string name="intro_about">Create your own stories with symbolic figures</string>
-    <string name="error_file_restore">Could not restore file</string>
+    <string name="error_file_restore">Could not restore story</string>
     <string name="intro_adding_description">Add figures and set colors through the top action bar</string>
     <string name="intro_credits">Developed in cooperation with</string>
     <string name="intro_adding_title">Create content</string>
@@ -66,5 +60,5 @@
     <string name="logo_kb_description">Logo for the Church City Mission</string>
     <string name="app_intro_skip_button">Skip</string>
     <string name="app_intro_done_button">Done</string>
-    <string name="action_show_intro">Show intro sequence</string>
+    <string name="action_show_intro">Show introduction</string>
 </resources>
