Change icons for adding figures and pages

--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -41,14 +41,13 @@
     <string name="error_file_delete">Kunne ikkje sletta fortelling</string>
     <string name="success_story_delete">Forteljing sletta</string>
     <string name="intro_about">Lag dine eigne fortellingar med symbolske figurar</string>
-    <string name="intro_adding_description">Legg til figurar og fargar via handlingslinja</string>
+    <string name="intro_adding_description">Legg til figurar og sett fargar via handlingslinja</string>
     <string name="intro_credits">Utvikla i samarbeid med</string>
     <string name="intro_adding_title">Skap innhold</string>
     <string name="intro_editing_description">Endra position, størrelse og rotasjon med firkantboksen</string>
     <string name="intro_editing_title">Endra innhold</string>
     <string name="logo_kb_description">Logo for Kirkens Bymisjon</string>
     <string name="logo_uib_description">Logo for Universitetet i Bergen</string>
-    <string name="intro_credits_and">og</string>
     <string name="app_intro_skip_button">Hopp over</string>
     <string name="app_intro_done_button">Ferdig</string>
     <string name="action_show_intro">Vis introduksjon</string>
