--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -52,4 +52,5 @@
     <string name="app_intro_done_button">Ferdig</string>
     <string name="action_show_intro">Vis introduksjon</string>
     <string name="error_file_restore">Kunne ikke gjenopprette ffortelling</string>
+    <string name="logo_hvl_description">Logo for Høgskulen på Vestlandet</string>
 </resources>
