--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="app_intro_skip_button">Skip</string>
     <string name="app_intro_done_button">Done</string>
     <string name="action_show_intro">Show introduction</string>
+    <string name="logo_hvl_description">Logo for the Western University of Applied Sciences</string>
 </resources>
